feat: add Gradle plugin properties and new PersistenceDependenciesPlugin